Fix button for Safari on iOS

--- a/website/assets/style.css
+++ b/website/assets/style.css
@@ -58,14 +58,16 @@ input[type=submit] {
   background-color: #f27405;
   color: #ffffff;
   border: none;
+  font-size: 16px;
   padding: 12px 22px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
   box-shadow: inset 0 -3px 0 rgba(0, 0, 0, 0.2);
   outline: none;
   cursor: pointer;
+  /* needed for mobile safari */
+  -webkit-appearance: none;
 }
 input[type=submit]:hover {
   background-color: #f25c05;
